packages/portfolio-site/main/default/objects/Certification__c/fields/Earned_Date__c.field-meta.xml
<CustomField>
    <fullName>Earned_Date__c</fullName>
    <label>Earned Date</label>
    <type>Date</type>
</CustomField>