packages/portfolio-site/main/default/objects/Certification__c/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issuer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Certifications</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>