packages/portfolio-site/main/default/objects/Certification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Earned_Date__c</columns>
    <columns>Issuer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>